src/styles/_List.scss
/* Copyright (c) Microsoft Corporation and others. */
/* SPDX-License-Identifier: MIT */

.List {
  width: 100%;
}

.list-row {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 5px 15px 5px 10px;
  cursor: pointer;

  &:hover {
    background: $color_black_10;
  }

  &.isEmpty,
  &.isEmpty:hover {
    cursor: not-allowed;

    .list-image,
    .list-body {
      opacity: 0.8;
    }

    .list-fa-button {
      color: inherit;
    }
  }

  .btn-link {
    padding: 0;
  }
}

.list-highlight-text {
  color: $color_highlight;
}

.list-image {
  display: inline-block;
  height: 40px;
  width: 40px;
  line-height: 40px;
  margin-right: 20px;
}

.list-highlight {
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 22px rgba(0, 0, 200, 0.86);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 22px rgba(0, 0, 200, 0.86);
}

.list-letter {
  display: inline-block;
  height: 40px;
  width: 40px;
  margin-right: 20px;
  line-height: 40px;
  text-align: center;
  border-radius: 40px;
  color: white;
  background-color: green;
  font-size: 1.5em;
}

.list-headline {
  font-weight: bold;
  margin-bottom: 2px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  a {
    color: inherit;
  }
  a:hover,
  a:focus {
    color: $color_highlight;
  }
}

.list-body {
  display: inline-flex;
  color: $color-text-main;
  flex-grow: 1;
  min-width: 1%;
  flex-direction: column;
}

.list-panel {
  margin-left: 70px;
  margin-right: 20px;
  p {
    margin: 0;
  }
  h5 {
    font-weight: bold;
    margin-bottom: 2px;
  }

  @media screen and (max-width: 992px) {
    margin: 0 10px;
  }
}

.list-singleLine {
  display: inline-flex;
  align-items: baseline;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin: 0;

  input {
    width: 90%;
  }
}

.list-activity-area {
  display: inline-flex;
  justify-content: flex-end;
  align-items: center;
  .rbt {
    width: 450px;
  }
  img {
    align-self: center;
    height: auto;
  }
  .btn-group {
    display: flex;
  }
}

.list-remove {
  font-size: 2rem;
  color: red;
  align-self: center;
  padding-left: 10px;

  @media screen and (max-width: 992px) {
    padding-top: 1px;
    padding-left: 5px;
  }
}

.list-buttons {
  align-self: center;
  padding-right: 10px;

  @media screen and (max-width: 992px) {
    width: 130px;
    padding-right: 5px;
  }
}

.list-hybrid-button {
  .fa {
    font-size: 1.5rem;
    color: #38a038;
  }
  align-self: center;
  padding-left: 10px;
}

.list-fa-button {
  color: #38a038;
}

.list-message {
  font-size: 0.85em;
  color: $color-text-main;
  a {
    color: inherit;
  }
  a:hover,
  a:focus {
    color: $color_highlight;
  }
}

.list-noRows {
  min-height: 200px;
  display: flex;
  align-items: center;
  justify-content: center;

  @media screen and (max-width: 992px) {
    padding: 10px;
  }
}

.list-filter {
  height: 50;
  align-self: center;
}

.list-button {
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  box-shadow: none !important;
}

.row.no-gutters {
  margin-right: 0;
  margin-left: 0;

  [class*='col-'] {
    padding-right: 0;
    padding-left: 0;
  }
}

